unsolvable.log
reference.cpp:707:47: error: unused parameter ‘q’ [-Werror=unused-parameter]
         bool isQueryColumnUnsolvable(LPQuery& q, Column& p, Satisfiability& sat) {
                                               ^
cc1plus: all warnings being treated as errors
make: *** [reference] Error 1
./run.sh: line 7: /home/lambros/dev/sigmod2015/src/reference: No such file or directory
